@@ -1,0 +1,6 @@
+
+-- Buff teslagun
+local teslagun = data.raw["gun"]["teslagun"]
+teslagun.attack_parameters.cooldown = 15
+teslagun.attack_parameters.range = 30
+teslagun.attack_parameters.ammo_consumption_modifier = 0.25
