@@ -2,6 +2,7 @@
 require "prototypes.init"
 require "buff_discharge"
 require "buff_destroyer"
+require "buff_teslagun"
 
 -- Override title screen music.
 -- data.raw["ambient-sound"]["main-menu"].sound = "__hextorio__/sound/somethingwhatever.ogg"
